...
            "state": "translated",
            "value": "关闭 macOS 横幅"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Fertig"
          }
...
            "state": "translated",
            "value": "启用后，允许您的 Mac 从此 iPad 同步健康数据"
          }
        }
      }
    },
    "Enabled": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Aktiviert"
          }
...
            "state": "translated",
            "value": "包含描述和上下文的详细格式"
          }
        }
      }
    },
    "Export": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Exportieren"
          }
...
            "state": "translated",
            "value": "设置计划"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
          }
...
